--- a/PlatformIO project/Regenboogpiano/platformio.ini
+++ b/PlatformIO project/Regenboogpiano/platformio.ini
@@ -8,15 +8,27 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[platformio]
-
-[env]
-
 [env:esp32dev]
 platform = espressif32
 board = esp32dev
 framework = arduino
 lib_deps = 
-	bodmer/TFT_eSPI@^2.3.73
-	adafruit/Adafruit ST7735 and ST7789 Library@^1.7.5
+	FS
+	SD(esp32)
+	Wire
+	SPI
+	SPIFFS
+	WiFi
+	WiFiClientSecure
+	HTTPClient
 	adafruit/Adafruit BusIO@^1.9.3
+	adafruit/Adafruit GFX Library@^1.10.12
+	adafruit/Adafruit ST7735 and ST7789 Library@^1.7.5
+	earlephilhower/ESP8266Audio@^1.9.3
+	; jason2866/ESP8266SAM@^1.0
+upload_speed = 2000000
+monitor_speed = 115200
+board_upload.flash_size = 16MB
+board_upload.maximum_size = 16777216
+board_build.partitions = default_16MB.csv
+; board_build.partitions = large_spiffs_16MB.csv
