--- a/PlatformIO project/Regenboogpiano/platformio.ini
+++ b/PlatformIO project/Regenboogpiano/platformio.ini
@@ -25,9 +25,10 @@ lib_deps =
 	adafruit/Adafruit GFX Library@^1.10.12
 	adafruit/Adafruit ST7735 and ST7789 Library@^1.7.5
 	earlephilhower/ESP8266Audio@^1.9.3
-	; arduino-libraries/SD@^1.2.4
+	adafruit/Adafruit NeoMatrix@^1.2.0
+	miguelbalboa/MFRC522@^1.4.10
 upload_speed = 2000000
 monitor_speed = 115200
 board_upload.flash_size = 16MB
 board_upload.maximum_size = 16777216
-board_build.partitions = default_16MB.csv
+board_build.partitions = default_16MB.csv ; TODO: MP3s not in SPIFFS but in PROGMEM? Disable SPIFFS? What about OTA (including MP3s in PROGMEM)?
