--- a/PlatformIO project/Regenboogpiano/platformio.ini
+++ b/PlatformIO project/Regenboogpiano/platformio.ini
@@ -31,4 +31,5 @@ upload_speed = 2000000
 monitor_speed = 115200
 board_upload.flash_size = 16MB
 board_upload.maximum_size = 16777216
-board_build.partitions = default_16MB.csv ; TODO: MP3s not in SPIFFS but in PROGMEM? Disable SPIFFS? What about OTA (including MP3s in PROGMEM)?
+board_upload.maximum_data_size = 16777216
+board_build.partitions = partition/16MB_2xOTA_8MB_no_SPIFFS.csv ; default_16MB.csv ; TODO: MP3s not in SPIFFS but in PROGMEM? Disable SPIFFS? What about OTA (including MP3s in PROGMEM)?
