--- a/Software/PlatformIO project/Regenboogpiano/platformio.ini
+++ b/Software/PlatformIO project/Regenboogpiano/platformio.ini
@@ -12,15 +12,17 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+lib_ldf_mode = deep+
 lib_deps = 
-	FS
 	SD(esp32)
-	Wire
-	SPI
-	SPIFFS
-	WiFi
-	WiFiClientSecure
-	HTTPClient
+	; arduino-libraries/FS
+	; arduino-libraries/Wire
+	; arduino-libraries/SPI
+	; arduino-libraries/SPIFFS
+	; arduino-libraries/WiFi
+	; arduino-libraries/WiFiClientSecure
+	; arduino-libraries/HTTPClient
+	adafruit/Adafruit NeoPixel@^1.10.1
 	adafruit/Adafruit BusIO@^1.9.3
 	adafruit/Adafruit GFX Library@^1.10.12
 	adafruit/Adafruit ST7735 and ST7789 Library@^1.7.5
