--- a/Software/PlatformIO project/Regenboogpiano/platformio.ini
+++ b/Software/PlatformIO project/Regenboogpiano/platformio.ini
@@ -13,13 +13,8 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 lib_ldf_mode = deep+
-lib_deps = 
-	; arduino-libraries/Wire
-	; arduino-libraries/SPI
-	; arduino-libraries/SPIFFS
-	; arduino-libraries/WiFi
-	; arduino-libraries/WiFiClientSecure
-	; arduino-libraries/HTTPClient
+lib_deps =
+	SD(esp32)
 	adafruit/Adafruit NeoPixel@^1.10.1
 	adafruit/Adafruit BusIO@^1.9.3
 	adafruit/Adafruit GFX Library@^1.10.12
