Software update, now with MP3s from SPIFFS

--- a/Software/PlatformIO project/Regenboogpiano/platformio.ini
+++ b/Software/PlatformIO project/Regenboogpiano/platformio.ini
@@ -27,4 +27,5 @@ monitor_speed = 115200
 board_upload.flash_size = 16MB
 board_upload.maximum_size = 16777216
 board_upload.maximum_data_size = 16777216
-board_build.partitions = partition/16MB_2xOTA_8MB_no_SPIFFS.csv ; default_16MB.csv ; TODO: MP3s not in SPIFFS but in PROGMEM? Disable SPIFFS? What about OTA (including MP3s in PROGMEM)?
+; board_build.partitions = partition/16MB_2xOTA_8MB_no_SPIFFS.csv ; TODO: MP3s not in SPIFFS but in PROGMEM? Disable SPIFFS? What about OTA (including MP3s in PROGMEM)?
+board_build.partitions = partition/default_16MB.csv
