--- a/Software/PlatformIO project/Regenboogpiano/platformio.ini
+++ b/Software/PlatformIO project/Regenboogpiano/platformio.ini
@@ -29,3 +29,4 @@ board_upload.maximum_size = 16777216
 board_upload.maximum_data_size = 16777216
 ; board_build.partitions = partition/16MB_2xOTA_8MB_no_SPIFFS.csv ; TODO: MP3s not in SPIFFS but in PROGMEM? Disable SPIFFS? What about OTA (including MP3s in PROGMEM)?
 board_build.partitions = partition/default_16MB.csv
+; board_build.partitions = default.csv
